refactor: improve benchmarking module compliance with project standards
- Add structured logging with LogRecord constants following CUI standards
- Create BenchmarkingLogMessages class with proper INFO/WARN/ERROR/DEBUG categories
- Add package-info.java for package documentation
- Remove Lombok dependency (UtilityClass) to align with project conventions
- Update BenchmarkRunner and BenchmarkResultProcessor to use LogRecord format
- Ensure proper Java 21 compliance with Path.of() usage
- Fix compilation issues and ensure clean build

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>